# groundtruth

./: .env.example  .gitignore  AI_USAGE.md  DEMO_VIDEO.md  FIX.md  LICENSE  MORNING_BRIEFING.md  PLAN.md  README.md  REDESIGN-V2.md  REDESIGN.md  REPAIR.md  SPIKE.md  V2.md  V3.md  VISION.md  pyproject.toml
data/: benchmark_questions.json  benchmark_results.json  briefing_run.json  claims.json  contested_pairs.json  osv_cve_run.json  osv_seed_corpus.json  seed_corpus.json  timeline_run.json  v2_claims.json  v2_results.json  v2_semantic_claims.json  v2_semantic_judgments.json
docs/: AI_USAGE.md  BENCHMARK.md  DEMO.md  EXTRACTION-CHECK-P1.json  RESULTS-FIX.md  RESULTS-P1.md  RESULTS-P2.md  RESULTS-P3.md  RESULTS-P6.md  RESULTS-REDESIGN.md  RESULTS-REPAIR.md  RESULTS-V2.md  RESULTS-V3-P0.md  RESULTS-V3-P1.md  RESULTS-V3-P2.md  RESULTS-V3-P3.md  RESULTS-V3-P4.md  RESULTS-V3-P5.md  RESULTS-V3-P8.md
groundtruth/: __init__.py  answer.py  beliefs.py  benchmark.py  briefing.py  contest.py  contradictions.py  feedback.py  ingest.py  ontology.py  p5.py  registry.py  runtime.py  timeline.py  v2.py  watcher.py
groundtruth/adapters/: __init__.py  osv.py  retraction_watch.py
spike/: RESULTS.md  run_spike.py
tests/: conftest.py  test_answer.py  test_authority_adapters.py  test_authority_engine.py  test_beliefs.py  test_benchmark.py  test_briefing.py  test_contest.py  test_feedback.py  test_osv_adapter.py  test_p2_feedback_wiring_no_llm.py  test_p5_artifacts.py  test_registry.py  test_timeline.py  test_v2.py  test_watcher.py  test_web.py
web/: __init__.py  app.py
(+8 files in other folders)
